--- a/TravelPal/Pages/PackingListPage.xaml
+++ b/TravelPal/Pages/PackingListPage.xaml
@@ -82,7 +82,7 @@
         <Label
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="0"
+            Grid.Row="1"
             VerticalAlignment="Center"
             HorizontalAlignment="Right"
             Content="Item Name:"
@@ -90,19 +90,20 @@
         <TextBox
             Name="TxtBxItemName"
             Grid.Column="4"
-            Grid.Row="0"
+            Grid.Row="1"
             Background="#10000000"
             BorderThickness="0,0,0,1.1"
             BorderBrush="Black"
             VerticalContentAlignment="Center"
             FontSize="20"
             Width="auto"
-            Height="30"/>
+            Height="30"
+            Text="{Binding ItemName}"/>
 
         <Label
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="1"
+            Grid.Row="2"
             VerticalAlignment="Center"
             HorizontalAlignment="Right"
             Content="Info about Item:"
@@ -110,18 +111,19 @@
         <TextBox
             Name="TxtBxItemInfo"
             Grid.Column="4"
-            Grid.Row="1"
+            Grid.Row="2"
             Background="#10000000"
             BorderThickness="0,0,0,1.1"
             BorderBrush="Black"
             VerticalContentAlignment="Center"
             FontSize="20"
             Width="auto"
-            Height="30"/>
+            Height="30"
+            Text="{Binding ItemInfo}"/>
 
         <Label
             Grid.Column="2"
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.ColumnSpan="2"
             VerticalAlignment="Center"
             HorizontalAlignment="Right"
@@ -130,17 +132,18 @@
         <CheckBox
             Name="ChkBxItemIsTravelDocument"
             Grid.Column="4"
-            Grid.Row="2"
+            Grid.Row="3"
             IsThreeState="False"
             VerticalAlignment="Center" 
             Checked="ChkBxItemIsTravelDocument_OnChecked"
             Unchecked="ChkBxItemIsTravelDocument_OnUnchecked"
+            IsChecked="{Binding ItemIsTravelDocument}"
         >Click for yes</CheckBox>
 
         <Label
             Name="LblItemCount"
             Grid.Column="3"
-            Grid.Row="3"
+            Grid.Row="4"
             VerticalAlignment="Center"
             HorizontalAlignment="Right"
             FontSize="20"
@@ -148,7 +151,7 @@
         <StackPanel
             Name="StkPanlItemCount"
             Grid.Column="4"
-            Grid.Row="3"
+            Grid.Row="4"
             Orientation="Horizontal">
             <TextBox
                 Name="TxtBxItemCount"
@@ -162,7 +165,7 @@
                 Height="30"
                 IsReadOnly="true"
                 HorizontalContentAlignment="Center"
-                Text="{Binding ItemCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Text="{Binding ItemCount, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                 PreviewTextInput="TxtBxItemCount_OnPreviewTextInput"
             ></TextBox>
 
@@ -197,7 +200,7 @@
             Visibility="Hidden"
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="3"
+            Grid.Row="4"
             Content="Item Is Required:"
             VerticalAlignment="Center"
             HorizontalAlignment="Right"
@@ -207,7 +210,7 @@
             Name="ChkBxItemIsRequired"
             Visibility="Hidden"
             Grid.Column="4"
-            Grid.Row="3"
+            Grid.Row="4"
             IsThreeState="False"
             VerticalAlignment="Center" 
             IsChecked="{Binding ItemIsRequired}">Click for yes</CheckBox>
@@ -215,26 +218,21 @@
 
 
 
-        <StackPanel
+        <Button
             Grid.Column="3"
             Grid.Row="5"
             Grid.ColumnSpan="2"
-            Orientation="Horizontal"
+            Name="BtnAddItemToList"
+            VerticalAlignment="Center"
             HorizontalAlignment="Center"
-            >
-            
+            Margin="0,0,10,0"
+            Padding="10"
+            Content="Add item"
+            Background="{StaticResource DarkMint}" 
+            Click="BtnAddItemToList_OnClick"/>
 
-            <Button
-                Name="BtnAddItemToList"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                Margin="0,0,10,0"
-                Padding="10"
-                Content="Add item"
-                Background="{StaticResource DarkMint}" 
-                Click="BtnAddItemToList_OnClick"/>
-            
-        </StackPanel>
-
+        <Button
+            Grid.Column="2"
+            Grid.Row="1" Click="Button_Click"></Button>
     </Grid>
 </Page>
