--- a/TravelPal/Pages/TravelPage.xaml
+++ b/TravelPal/Pages/TravelPage.xaml
@@ -26,36 +26,13 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         
-        <Label
-            Grid.Column="1"
-            Grid.Row="0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Center"
-            Margin="0,10,0,0"
-            Content="↓ Choose Travel ↓"/>
+       
 
-        <ComboBox
-            Name="ComboBxTravels"
-            Grid.Column="1"
-            Grid.Row="0"
-            Height="45"
-            Width="230"
-            VerticalAlignment="Bottom"
-            VerticalContentAlignment="Center"
-            HorizontalContentAlignment="Center"
-            FontSize="20"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black">
-            <ComboBox.ItemContainerStyle>
-                <Style TargetType="{x:Type ComboBoxItem}">
-                    <Setter Property="FontSize" Value="14" />
-                </Style>
-            </ComboBox.ItemContainerStyle>
-        </ComboBox>
+
+        
 
         <StackPanel
-            Grid.Column="2"
+            Grid.Column="1"
             Grid.Row="0"
             Orientation="Horizontal"
             VerticalAlignment="Bottom"
@@ -64,19 +41,36 @@
                 Name="BtnCreateNewTravel"
                 VerticalAlignment="Bottom"
                 HorizontalAlignment="Center"
-                Content="New Travel Plan"
+                Content="Travel Details"
                 Padding="10"
+                Margin="10"
                 Background="{StaticResource DarkMint}" 
                 Click="BtnCreateNewTravel_Click"
+            />
+            <Button
+                Name="BtnPackingList"
+                Padding="10"
+                Margin="10"
+                Content="Packing List" 
+                Background="{StaticResource DarkMint}"
+                Click="BtnPackingList_Click"
             />
         </StackPanel>
 
         <Button
-            Name="BtnPackingList"
-            Grid.Column="0"
-            Grid.Row="0" 
-            Content="packign lsit &#xD;&#xA;page" Click="BtnPackingList_Click"
-            />
+            Name="BtnCreateTravel"
+            Grid.Column="2"
+            Grid.Row="0"
+            Padding="15"
+            Margin="15"
+            Content="Create New Travel"
+            FontSize="15"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            VerticalContentAlignment="Center"
+            HorizontalContentAlignment="Center"
+            Background="{StaticResource BlueMint}" Click="BtnCreateTravel_Click"
+            ></Button>
         
 
         <Frame
