--- a/TravelPal/Pages/UserDetailsPage.xaml
+++ b/TravelPal/Pages/UserDetailsPage.xaml
@@ -8,7 +8,8 @@
       d:DesignHeight="{StaticResource PageHeight}" 
       d:DesignWidth="{StaticResource PageWidth}"
       Title="UserDetailsPage"
-      Background="{StaticResource GradientMainWindow}">
+      Background="{StaticResource GradientMainWindow}"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,5 +26,79 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
+
+        <Label
+            Grid.Column="1"
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            Content="User Details"
+            FontSize="30"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            ></Label>
+
+
+        <Label
+            Grid.Column="1"
+            Grid.Row="1"
+            FontSize="20"
+            Content="User Name:"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"
+            ></Label>
+        <TextBox
+            Grid.Column="2"
+            Grid.Row="1"
+            Background="#10000000"
+            BorderThickness="0,0,0,1.1"
+            BorderBrush="Black"
+            HorizontalContentAlignment="Left"
+            FontSize="20"
+            Width="auto"
+            Height="30"></TextBox>
+
+        <Label
+            Grid.Column="1"
+            Grid.Row="2"
+            FontSize="20"
+            Content="Country of Origin:"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"></Label>
+        <StackPanel
+            Grid.Column="2"
+            Grid.Row="2" >
+
+            <StackPanel 
+                Orientation="Horizontal"
+                HorizontalAlignment="Center">
+                <Label
+                    Content="Eu Country:"></Label>
+                <CheckBox
+                    VerticalAlignment="Center"
+                    Margin="0,2,0,0"
+                    IsChecked="{Binding IsEUCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
+            </StackPanel>
+            <ComboBox
+                Name="ComboBxCountries"
+                VerticalContentAlignment="Center"
+                HorizontalContentAlignment="Center"
+                FontSize="10"
+                Background="#10000000"
+                BorderThickness="0,0,0,1.1"
+                Margin="0,0,0,0"
+                Height="30"
+                BorderBrush="Black"
+                SelectedItem="{Binding SelectedCountryOfOrigin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                ItemsSource="{Binding Countries}">
+                <ComboBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ComboBoxItem}">
+                        <Setter Property="FontSize" Value="10" />
+                    </Style>
+                </ComboBox.ItemContainerStyle>
+            </ComboBox>
+        </StackPanel>
+
+
+
     </Grid>
 </Page>
