--- a/TravelPal/Pages/ViewTravelPage.xaml
+++ b/TravelPal/Pages/ViewTravelPage.xaml
@@ -49,7 +49,8 @@
             BorderBrush="Transparent" 
             BorderThickness="0" 
             Margin="10" 
-            Padding="5">
+            Padding="5"
+            ItemsSource="{Binding Travels}">
 
             <ListView.Template>
                 <ControlTemplate TargetType="ListView">
