--- a/TravelPal/Pages/ChooseTravelPage.xaml
+++ b/TravelPal/Pages/ChooseTravelPage.xaml
@@ -1,64 +1,65 @@
-﻿<Page x:Class="TravelPal.Pages.ChooseTravelPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="ChooseTravelPage"
-      Background="Transparent"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.ChooseTravelPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="ChooseTravelPagee"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    Background="Transparent"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <Label
-            Grid.Column="1"
             Grid.Row="0"
+            Grid.Column="1"
             Grid.ColumnSpan="2"
-            Content="Your Travels"
-            FontSize="20"
-            VerticalAlignment="Center"
             HorizontalAlignment="Center"
-            />
+            VerticalAlignment="Center"
+            Content="Your Travels"
+            FontSize="20" />
 
         <ListView
-            Grid.Column="1"
             Grid.Row="1"
-            Grid.ColumnSpan="2"
             Grid.RowSpan="5"
-            Background="#33000000" 
-            Foreground="White" 
-            BorderBrush="Transparent" 
-            BorderThickness="0" 
-            Margin="10" 
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
+            Margin="10"
             Padding="5"
+            Background="#33000000"
+            BorderBrush="Transparent"
+            BorderThickness="0"
+            Foreground="White"
             ItemsSource="{Binding Travels, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectionMode="Single">
 
             <ListView.Template>
                 <ControlTemplate TargetType="ListView">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
                         <ScrollViewer>
                             <ItemsPresenter />
                         </ScrollViewer>
@@ -71,15 +72,24 @@
 
         <Button
             Name="BtnViewTravel"
-            Grid.Column="1"
             Grid.Row="6"
-            Grid.ColumnSpan="2"
-            Content="View Travel"
+            Grid.Column="1"
             Padding="20"
-            VerticalAlignment="Center"
             HorizontalAlignment="Center"
-            Background="{StaticResource DarkMint}" Click="BtnViewTravel_Click"
-            ></Button>
-        
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Click="BtnViewTravel_Click"
+            Content="View Travel" />
+
+        <Button
+            Name="BtnDeleteTravel"
+            Grid.Row="6"
+            Grid.Column="2"
+            Padding="20"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Click="BtnDeleteTravel_Click"
+            Content="    Delete    " />
     </Grid>
 </Page>
