--- a/TravelPal/Pages/HeaderPage.xaml
+++ b/TravelPal/Pages/HeaderPage.xaml
@@ -1,107 +1,112 @@
-﻿<Page x:Class="TravelPal.Pages.HeaderPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource HeaderHeight}" 
-      d:DesignWidth="{StaticResource HeaderWidth}"
-      Title="HeaderPage"
-      Background="{StaticResource GradientHeaderBackground}"
-      ShowsNavigationUI="False"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.HeaderPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="HeaderPage"
+    d:DesignHeight="{StaticResource HeaderHeight}"
+    d:DesignWidth="{StaticResource HeaderWidth}"
+    Background="{StaticResource GradientHeaderBackground}"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    ShowsNavigationUI="False"
+    mc:Ignorable="d">
 
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions>
-        </Grid.RowDefinitions>
+        <Grid.RowDefinitions />
 
         <StackPanel
             Name="StckPanelTravel"
-            Grid.Column="0"
             Grid.Row="0"
+            Grid.Column="0"
+            VerticalAlignment="Center"
             Orientation="Vertical"
-            Visibility="Hidden"
-            VerticalAlignment="Center">
+            Visibility="Hidden">
 
             <Button
                 Name="BtnTravel"
-                HorizontalAlignment="Center"
                 Padding="3"
-                Content="Create Travel"
-                FontSize="20"
+                HorizontalAlignment="Center"
+                Background="Transparent"
                 BorderThickness="0,0,0,1"
-                Background="Transparent" 
-                Click="BtnTravel_OnClick">
-
-            </Button>
+                Click="BtnTravel_OnClick"
+                Content="Create Travel"
+                FontSize="20" />
 
         </StackPanel>
 
 
         <StackPanel
             Name="StckPanelMiddle"
-            Visibility="Hidden"
-            Grid.Column="1"
             Grid.Row="0"
+            Grid.Column="1"
+            HorizontalAlignment="Center"
             Orientation="Horizontal"
-            HorizontalAlignment="Center">
+            Visibility="Hidden">
             <Button
                 Name="BtnViewTravels"
-                Content="Your Travels"
                 Margin="2"
-                VerticalAlignment="Center"
                 HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="Transparent"
                 BorderThickness="0,0,0,1"
-                Background="Transparent" 
-                Click="BtnViewTravels_OnClick"></Button>
+                Click="BtnViewTravels_OnClick"
+                Content="Your Travels" />
+            <Button
+                Name="BtnAboutTravelPal"
+                Margin="2"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="Transparent"
+                BorderThickness="0,0,0,1"
+                Click="BtnAboutTravelPal_OnClick"
+                Content="About TravelPal" />
         </StackPanel>
 
 
         <StackPanel
-            Grid.Column="2"
             Grid.Row="0"
+            Grid.Column="2"
             Orientation="Vertical">
             <Button
                 Name="BtnExitApp"
                 Width="20"
                 Height="20"
-                HorizontalAlignment="Right"
                 Padding="0,0,0,0"
-                Content="❌"
+                HorizontalAlignment="Right"
+                Background="Transparent"
                 BorderThickness="0"
-                Background="Transparent" Click="BtnExitApp_Click">
-                
-            </Button>
+                Click="BtnExitApp_Click"
+                Content="❌" />
 
 
             <TextBox
                 Name="TxtBxLogInStatus"
-                Background="Transparent"
-                FontSize="10"
-                Foreground="{StaticResource TextColor}"
-                TextAlignment="Right"
                 Margin="0,5,0,0"
                 Padding="0,0,10,0"
+                Background="Transparent"
                 BorderThickness="0"
-            />
+                FontSize="10"
+                Foreground="{StaticResource TextColor}"
+                TextAlignment="Right" />
             <Button
                 Name="BtnUserDetails"
-                Background="Transparent"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Right"
-                FontSize="20"
-                Foreground="{StaticResource TextColor}"
                 Margin="0,0,10,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Background="Transparent"
                 BorderThickness="0"
-                Click="BtnUserDetails_OnClick"/>
+                Click="BtnUserDetails_OnClick"
+                FontSize="20"
+                Foreground="{StaticResource TextColor}" />
 
         </StackPanel>
 
