--- a/TravelPal/Pages/TravelPage.xaml
+++ b/TravelPal/Pages/TravelPage.xaml
@@ -1,86 +1,84 @@
-﻿<Page x:Class="TravelPal.Pages.TravelPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="TravelPage"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.TravelPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="TravelPage"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        
-       
 
 
-        
+
+
+
 
         <StackPanel
-            Grid.Column="1"
             Grid.Row="0"
-            Orientation="Horizontal"
+            Grid.Column="1"
+            HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
-            HorizontalAlignment="Center">
+            Orientation="Horizontal">
             <Button
                 Name="BtnCreateNewTravel"
-                VerticalAlignment="Bottom"
-                HorizontalAlignment="Center"
-                Content="Travel Details"
-                Padding="10"
                 Margin="10"
-                Background="{StaticResource DarkMint}" 
+                Padding="10"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Background="{StaticResource DarkMint}"
                 Click="BtnCreateNewTravel_Click"
-            />
+                Content="Travel Details" />
             <Button
                 Name="BtnPackingList"
-                Padding="10"
                 Margin="10"
-                Content="Packing List" 
+                Padding="10"
                 Background="{StaticResource DarkMint}"
                 Click="BtnPackingList_Click"
-            />
+                Content="Packing List" />
         </StackPanel>
 
         <Button
             Name="BtnCreateTravel"
-            Grid.Column="2"
             Grid.Row="0"
-            Padding="15"
+            Grid.Column="2"
             Margin="15"
-            Content="Create New Travel"
-            FontSize="15"
-            VerticalAlignment="Center"
+            Padding="15"
             HorizontalAlignment="Center"
-            VerticalContentAlignment="Center"
+            VerticalAlignment="Center"
             HorizontalContentAlignment="Center"
-            Background="{StaticResource BlueMint}" Click="BtnCreateTravel_Click"
-            ></Button>
-        
+            VerticalContentAlignment="Center"
+            Background="{StaticResource BlueMint}"
+            Click="BtnCreateTravel_Click"
+            Content="Create New Travel"
+            FontSize="15" />
+
 
         <Frame
             Name="FrameMain"
-            Grid.Column="1"
             Grid.Row="1"
-            Grid.ColumnSpan="2"
             Grid.RowSpan="5"
-            NavigationUIVisibility="Hidden"
-            />
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
+            NavigationUIVisibility="Hidden" />
 
     </Grid>
 </Page>
