--- a/TravelPal/Pages/UserDetailsPage.xaml
+++ b/TravelPal/Pages/UserDetailsPage.xaml
@@ -1,98 +1,92 @@
-﻿<Page x:Class="TravelPal.Pages.UserDetailsPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="UserDetailsPage"
-      Background="{StaticResource GradientMainWindow}"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.UserDetailsPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="UserDetailsPage"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    Background="{StaticResource GradientMainWindow}"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <Label
-            Grid.Column="1"
             Grid.Row="0"
+            Grid.Column="1"
             Grid.ColumnSpan="2"
-            Content="User Details"
-            FontSize="30"
-            VerticalAlignment="Center"
             HorizontalAlignment="Center"
-            ></Label>
+            VerticalAlignment="Center"
+            Content="User Details"
+            FontSize="30" />
 
 
         <Label
-            Grid.Column="1"
             Grid.Row="1"
-            FontSize="20"
-            Content="User Name:"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
-            ></Label>
+            VerticalAlignment="Center"
+            Content="User Name:"
+            FontSize="20" />
         <TextBox
             Name="TxtBxUserName"
-            Grid.Column="2"
             Grid.Row="1"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            HorizontalContentAlignment="Left"
-            FontSize="20"
+            Grid.Column="2"
             Width="auto"
             Height="30"
-            Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            HorizontalContentAlignment="Left"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Label
-            Grid.Column="1"
             Grid.Row="2"
-            FontSize="20"
-            Content="Country of Origin:"
+            Grid.Column="1"
+            HorizontalAlignment="Right"
             VerticalAlignment="Center"
-            HorizontalAlignment="Right"></Label>
-        <StackPanel
-            Grid.Column="2"
-            Grid.Row="2" >
+            Content="Country of Origin:"
+            FontSize="20" />
+        <StackPanel Grid.Row="2" Grid.Column="2">
 
-            <StackPanel 
-                Orientation="Horizontal"
-                HorizontalAlignment="Center">
-                <Label
-                    Content="Eu Country:"></Label>
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                <Label Content="Eu Country:" />
                 <CheckBox
-                    VerticalAlignment="Center"
                     Margin="0,2,0,0"
-                    IsChecked="{Binding IsEUCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
+                    VerticalAlignment="Center"
+                    IsChecked="{Binding IsEUCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
             <ComboBox
                 Name="ComboBxCountries"
-                VerticalContentAlignment="Center"
-                HorizontalContentAlignment="Center"
-                FontSize="10"
-                Background="#10000000"
-                BorderThickness="0,0,0,1.1"
-                Margin="0,0,0,0"
                 Height="30"
+                Margin="0,0,0,0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Background="#10000000"
                 BorderBrush="Black"
-                SelectedItem="{Binding SelectedCountryOfOrigin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                ItemsSource="{Binding Countries}">
+                BorderThickness="0,0,0,1.1"
+                FontSize="10"
+                ItemsSource="{Binding Countries}"
+                SelectedItem="{Binding SelectedCountryOfOrigin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ComboBox.ItemContainerStyle>
                     <Style TargetType="{x:Type ComboBoxItem}">
                         <Setter Property="FontSize" Value="10" />
@@ -102,76 +96,78 @@
         </StackPanel>
 
         <Label
-            Grid.Column="1"
             Grid.Row="3"
-            FontSize="20"
-            Content="Password"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
-            ></Label>
+            VerticalAlignment="Center"
+            Content="Password"
+            FontSize="20" />
         <TextBox
             Name="TxtBxPassword"
-            Grid.Column="2"
             Grid.Row="3"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            HorizontalContentAlignment="Left"
-            FontSize="20"
+            Grid.Column="2"
             Width="auto"
             Height="30"
-            Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            >
-
-        </TextBox>
+            HorizontalContentAlignment="Left"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Label
-            Grid.Column="1"
             Grid.Row="4"
-            FontSize="20"
-            Content="Repeat Password:"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
-        ></Label>
+            VerticalAlignment="Center"
+            Content="Repeat Password:"
+            FontSize="20" />
         <TextBox
             Name="TxtBxRepeatPassword"
-            Grid.Column="2"
             Grid.Row="4"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            HorizontalContentAlignment="Left"
-            FontSize="20"
+            Grid.Column="2"
             Width="auto"
             Height="30"
-            Text="{Binding ReapeatPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            >
-
-        </TextBox>
+            HorizontalContentAlignment="Left"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding ReapeatPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Button
             Name="BtnEditDetails"
-            Grid.Column="1"
             Grid.Row="5"
             Grid.RowSpan="2"
-            Content="EDIT"
-            VerticalAlignment="Center"
+            Grid.Column="1"
+            Padding="30,10,30,10"
             HorizontalAlignment="Center"
-            Padding="30,10,30,10" 
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
             Click="BtnEditDetails_Click"
-            Background="{StaticResource DarkMint}"></Button>
+            Content="EDIT" />
 
 
         <Button
             Name="BtnSaveDetails"
-            Grid.Column="2"
             Grid.Row="5"
             Grid.RowSpan="2"
-            Content="Save"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Center"
+            Grid.Column="2"
             Padding="30,10,30,10"
-            Background="{StaticResource DarkMint}" Click="BtnSaveDetails_Click"></Button>
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Click="BtnSaveDetails_Click"
+            Content="Save" />
 
+        <Button
+            Name="BtnLogOut"
+            Grid.Row="0"
+            Grid.Column="3"
+            Padding="30,10,30,10"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Content="Log Out" Click="BtnLogOut_Click" />
     </Grid>
 </Page>
