--- a/TravelPal/Pages/AddNewTravelPage.xaml
+++ b/TravelPal/Pages/AddNewTravelPage.xaml
@@ -1,98 +1,93 @@
-﻿<Page x:Class="TravelPal.Pages.AddNewTravelPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="412.5" 
-      d:DesignWidth="640"
-      Title="AddNewTravelPage"
-      Background="{StaticResource GradientMainWindow}"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.AddNewTravelPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="AddNewTravelPage"
+    d:DesignHeight="412.5"
+    d:DesignWidth="640"
+    Background="{StaticResource GradientMainWindow}"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="0.5*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        
+
 
         <Label
-            Grid.Column="0"
             Grid.Row="0"
-            Content="Trip Name:"
-            VerticalAlignment="Center"
+            Grid.Column="0"
             HorizontalAlignment="Right"
-            FontSize="20"/>
+            VerticalAlignment="Center"
+            Content="Trip Name:"
+            FontSize="20" />
         <TextBox
             Name="TxtBxTripName"
-            Grid.Column="1"
             Grid.Row="0"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="1"
             Width="auto"
             Height="30"
-            Text="{Binding TravelName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            />
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding TravelName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
         <Label
+            Grid.Row="1"
             Grid.Column="0"
-            Grid.Row="1"
-            Content="Departing from:"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
-            FontSize="20"/>
-        <StackPanel 
-            Grid.Column="1"
+            VerticalAlignment="Center"
+            Content="Departing from:"
+            FontSize="20" />
+        <StackPanel
             Grid.Row="1"
-            Orientation="Vertical"
-            
+            Grid.Column="1"
+            Width="auto"
             Height="auto"
-            Width="auto">
+            Orientation="Vertical">
 
-            <StackPanel
-                Orientation="Horizontal"
-                HorizontalAlignment="Center">
-                <Label
-                    Content="Eu Country"></Label>
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                <Label Content="Eu Country" />
                 <CheckBox
                     Name="ChkBxEuCountryDepart"
                     VerticalAlignment="Center"
-                    Unchecked="ChkBxEuCountry_OnUnchecked"
                     Checked="ChkBxEuCountryDepart_Checked"
-                    IsThreeState="False"
                     IsChecked="False"
-                />
+                    IsThreeState="False"
+                    Unchecked="ChkBxEuCountry_OnUnchecked" />
             </StackPanel>
 
 
             <ComboBox
                 Name="ComboBxCountriesDepart"
-                SelectionChanged="ComboBxToAndFromCountry_onSelectionChanged"
-                VerticalContentAlignment="Center"
-                HorizontalContentAlignment="Center"
-                FontSize="10"
-                Background="#10000000"
-                BorderThickness="0,0,0,1.1"
                 Margin="0,9,0,0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Background="#10000000"
                 BorderBrush="Black"
-                SelectedItem="{Binding FromCountrySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                BorderThickness="0,0,0,1.1"
+                FontSize="10"
+                SelectedItem="{Binding FromCountrySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectionChanged="ComboBxToAndFromCountry_onSelectionChanged">
                 <ComboBox.ItemContainerStyle>
                     <Style TargetType="{x:Type ComboBoxItem}">
                         <Setter Property="FontSize" Value="10" />
@@ -100,48 +95,44 @@
                 </ComboBox.ItemContainerStyle>
             </ComboBox>
         </StackPanel>
-        
-        <Label
-            Grid.Column="0"
-            Grid.Row="2"
-            Content="Arriving to:"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Right"
-            FontSize="20"/>
-        <StackPanel 
-            Grid.Column="1"
-            Grid.Row="2"
-            Orientation="Vertical"
-            Height="auto"
-            Width="auto">
 
-            <StackPanel
-                Orientation="Horizontal"
-                HorizontalAlignment="Center">
-                <Label
-                    Content="Eu Country"></Label>
+        <Label
+            Grid.Row="2"
+            Grid.Column="0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            Content="Arriving to:"
+            FontSize="20" />
+        <StackPanel
+            Grid.Row="2"
+            Grid.Column="1"
+            Width="auto"
+            Height="auto"
+            Orientation="Vertical">
+
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                <Label Content="Eu Country" />
                 <CheckBox
                     Name="ChkBxEuCountryArrival"
                     VerticalAlignment="Center"
-                    Unchecked="ChkBxEuCountryArrival_OnUnchecked"
                     Checked="ChkBxEuCountryArrival_OnChecked"
-                    IsThreeState="False"
                     IsChecked="False"
-                />
+                    IsThreeState="False"
+                    Unchecked="ChkBxEuCountryArrival_OnUnchecked" />
             </StackPanel>
 
 
             <ComboBox
                 Name="ComboBxCountriesArrival"
-                SelectionChanged="ComboBxToAndFromCountry_onSelectionChanged"
-                VerticalContentAlignment="Center"
-                HorizontalContentAlignment="Center"
-                FontSize="10"
-                Background="#10000000"
-                BorderThickness="0,0,0,1.1"
                 Margin="0,9,0,0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Background="#10000000"
                 BorderBrush="Black"
-                SelectedItem="{Binding ToCountrySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                BorderThickness="0,0,0,1.1"
+                FontSize="10"
+                SelectedItem="{Binding ToCountrySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectionChanged="ComboBxToAndFromCountry_onSelectionChanged">
                 <ComboBox.ItemContainerStyle>
                     <Style TargetType="{x:Type ComboBoxItem}">
                         <Setter Property="FontSize" Value="10" />
@@ -151,132 +142,122 @@
         </StackPanel>
 
         <Label
-            Grid.Column="0"
             Grid.Row="3"
-            Content="Arriving to City:"
-            VerticalAlignment="Center"
+            Grid.Column="0"
             HorizontalAlignment="Right"
-            FontSize="20"/>
+            VerticalAlignment="Center"
+            Content="Arriving to City:"
+            FontSize="20" />
 
         <TextBox
             Name="TxtBxArivalCity"
-            Grid.Column="1"
             Grid.Row="3"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="1"
             Width="auto"
             Height="30"
-            Text="{Binding ArrivalCity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            ></TextBox>
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding ArrivalCity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Label
-            Grid.Column="3"
             Grid.Row="0"
-            Content="Starting Date:"
-            VerticalAlignment="Center"
+            Grid.Column="3"
             HorizontalAlignment="Right"
-            FontSize="20">
-        </Label>
+            VerticalAlignment="Center"
+            Content="Starting Date:"
+            FontSize="20" />
         <DatePicker
             Name="DatePickrStarting"
-            Grid.Column="4"
             Grid.Row="0"
+            Grid.Column="4"
             VerticalAlignment="Center"
-            Text="{Binding StartDay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            ></DatePicker>
+            Text="{Binding StartDay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Label
-            Grid.Column="3"
             Grid.Row="1"
-            Content="Ending Date:"
-            VerticalAlignment="Center"
+            Grid.Column="3"
             HorizontalAlignment="Right"
-            FontSize="20">
-        </Label>
+            VerticalAlignment="Center"
+            Content="Ending Date:"
+            FontSize="20" />
         <DatePicker
             Name="DatePickrEnding"
-            Grid.Column="4"
             Grid.Row="1"
+            Grid.Column="4"
             VerticalAlignment="Center"
-            Text="{Binding EndDay , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-        ></DatePicker>
+            Text="{Binding EndDay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
         <Label
-            Grid.Column="3"
             Grid.Row="2"
-            Content="Travellers:"
-            VerticalAlignment="Center"
+            Grid.Column="3"
             HorizontalAlignment="Right"
-            FontSize="20"/>
+            VerticalAlignment="Center"
+            Content="Travellers:"
+            FontSize="20" />
 
         <StackPanel
-            Grid.Column="4"
             Grid.Row="2"
-            Orientation="Horizontal"
-            >
+            Grid.Column="4"
+            Orientation="Horizontal">
             <TextBox
                 Name="TxtBxTravellerCount"
-                Background="#10000000"
-                BorderThickness="0,0,0,1.1"
-                BorderBrush="Black"
-                VerticalContentAlignment="Center"
-                VerticalAlignment="Center"
-                FontSize="20"
                 Width="120"
                 Height="30"
-                IsReadOnly="true"
+                VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
-                Text="{Binding TravellerCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                VerticalContentAlignment="Center"
+                Background="#10000000"
+                BorderBrush="Black"
+                BorderThickness="0,0,0,1.1"
+                FontSize="20"
+                IsReadOnly="true"
                 PreviewTextInput="TxtBxTravellerCount_OnPreviewTextInput"
-            ></TextBox>
+                Text="{Binding TravellerCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-            <StackPanel
-                HorizontalAlignment="Right"
-                Margin="8,20,0,0">
+            <StackPanel Margin="8,20,0,0" HorizontalAlignment="Right">
                 <Button
                     Name="BtnIncrementTravellersUp"
                     Width="20"
                     Height="20"
+                    Margin="0,0,0,2"
                     Background="{StaticResource DarkMint}"
-                    Content="{StaticResource ArrowUp}"
-                    Margin="0,0,0,2" 
-                    Click="BtnIncrementTravellersUp_Click"/>
+                    Click="BtnIncrementTravellersUp_Click"
+                    Content="{StaticResource ArrowUp}" />
 
                 <Button
                     Name="BtnIncrementTravellersDown"
                     Width="20"
                     Height="20"
                     Background="{StaticResource DarkMint}"
-                    Content="{StaticResource ArrowDown}" 
-                    Click="BtnIncrementTravellersDown_Click"/>
+                    Click="BtnIncrementTravellersDown_Click"
+                    Content="{StaticResource ArrowDown}" />
             </StackPanel>
         </StackPanel>
 
-        
+
 
 
         <Label
-            Grid.Column="3"
             Grid.Row="3"
-            Content="Type Of trip:"
-            VerticalAlignment="Center"
+            Grid.Column="3"
             HorizontalAlignment="Right"
-            FontSize="20"
-            />
+            VerticalAlignment="Center"
+            Content="Type Of trip:"
+            FontSize="20" />
         <ComboBox
             Name="ComboBxTripType"
-            Grid.Column="4"
             Grid.Row="3"
+            Grid.Column="4"
             Height="25"
-            VerticalContentAlignment="Center"
             HorizontalContentAlignment="Center"
-            FontSize="10"
+            VerticalContentAlignment="Center"
             Background="#10000000"
-            BorderThickness="0,0,0,1.1"
             BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="10"
             SelectionChanged="ComboBxTripType_OnSelectionChanged">
 
 
@@ -285,69 +266,68 @@
                     <Setter Property="FontSize" Value="10" />
                 </Style>
             </ComboBox.ItemContainerStyle>
-            <ComboBoxItem Tag="Vacation" >Vacation</ComboBoxItem>
+            <ComboBoxItem Tag="Vacation">Vacation</ComboBoxItem>
             <ComboBoxItem Tag="Work Trip">Work Trip</ComboBoxItem>
 
 
         </ComboBox>
 
-        <!--When the ComboBxTripType is Vacation-->
+        <!--  When the ComboBxTripType is Vacation  -->
         <Label
-            Visibility="Hidden"
             Name="LblAllInclusive"
-            Grid.Column="3"
             Grid.Row="4"
+            Grid.Column="3"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="All Inclusive:"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Right"
             FontSize="20"
-            />
+            Visibility="Hidden" />
         <CheckBox
-            Visibility="Hidden"
             Name="ChkBxIsAllInclusive"
-            Grid.Column="4"
             Grid.Row="4"
+            Grid.Column="4"
+            VerticalAlignment="Center"
+            IsChecked="{Binding IsAllInclusive, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             IsThreeState="False"
-            VerticalAlignment="Center"
-            IsChecked="{Binding IsAllInclusive,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <!--When the ComboBxTripType is Vacation END-->
+            Visibility="Hidden" />
+        <!--  When the ComboBxTripType is Vacation END  -->
 
 
-        <!--When the ComboBxTripType is Work Trip-->
+        <!--  When the ComboBxTripType is Work Trip  -->
         <Label
-            Visibility="Hidden"
             Name="LblWorkTrip"
+            Grid.Row="4"
             Grid.Column="3"
-            Grid.Row="4"
-            Content="Work Details:"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
-            FontSize="20"/>
-        <TextBox
-            Visibility="Hidden"
-            Name="TxtBxWorkTrip"
-            Grid.Column="4"
-            Grid.Row="4"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
+            VerticalAlignment="Center"
+            Content="Work Details:"
             FontSize="20"
+            Visibility="Hidden" />
+        <TextBox
+            Name="TxtBxWorkTrip"
+            Grid.Row="4"
+            Grid.Column="4"
             Width="auto"
             Height="30"
-            Text="{Binding WorkDetails, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <!--When the ComboBxTripType is Work Trip END-->
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding WorkDetails, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            Visibility="Hidden" />
+        <!--  When the ComboBxTripType is Work Trip END  -->
 
 
 
 
-       
-      
-        
 
 
 
 
-            
+
+
+
+
     </Grid>
 </Page>
