--- a/TravelPal/Pages/LogInPage.xaml
+++ b/TravelPal/Pages/LogInPage.xaml
@@ -1,129 +1,125 @@
-﻿<Page x:Class="TravelPal.Pages.LogInPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="LogInPage"
-      Background="Transparent"
-      ShowsNavigationUI="False"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}"
-      >
+﻿<Page
+    x:Class="TravelPal.Pages.LogInPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="LogInPage"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    Background="Transparent"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    ShowsNavigationUI="False"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="*" />
 
         </Grid.RowDefinitions>
 
 
         <Label
-            Grid.Column="1"
             Grid.Row="1"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="User Name:"
             FontSize="30"
-            Foreground="{StaticResource TextColor}"
-            />
+            Foreground="{StaticResource TextColor}" />
         <TextBox
             Name="TxtBxUserName"
-            Grid.Column="2"
             Grid.Row="1"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            Margin="0,0,80,0"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="2"
             Width="auto"
             Height="50"
-            Text="{Binding UserName}"/>
+            Margin="0,0,80,0"
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding UserName}" />
 
         <Label
-            Grid.Column="1"
             Grid.Row="2"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="Password:"
             FontSize="32"
-            Foreground="{StaticResource TextColor}"
-            />
+            Foreground="{StaticResource TextColor}" />
         <TextBox
             Name="TxtBxPassword"
-            Grid.Column="2"
             Grid.Row="2"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="2"
             Width="auto"
-            Margin="0,0,80,0"
             Height="50"
-            Text="{Binding Password}"/>
+            Margin="0,0,80,0"
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding Password}" />
 
         <StackPanel
-            Grid.Column="1"
             Grid.Row="3"
-            Grid.ColumnSpan="2"
-            >
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
             <Label
                 Name="LblErrorInfo"
-                FontSize="20"
-                Content=""
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
                 Margin="10"
-                Foreground="Red"/>
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content=""
+                FontSize="20"
+                Foreground="Red" />
             <Button
                 Name="BtnLogIn"
-                Cursor="Hand"
-                Background="{StaticResource DarkMint}"
                 Width="180"
                 Height="60"
+                Background="{StaticResource DarkMint}"
+                Click="BtnLogIn_Click"
                 Content="Log In"
+                Cursor="Hand"
                 FontSize="30"
-                FontWeight="Bold" Click="BtnLogIn_Click"
-            />
+                FontWeight="Bold" />
         </StackPanel>
         <Button
             Name="BtnNoAccount"
-            Grid.Column="1"
             Grid.Row="4"
+            Grid.Column="1"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Background="Transparent"
-            Content="Dont have an Account?"
-            BorderThickness="0,0,0,1"
             BorderBrush="Black"
+            BorderThickness="0,0,0,1"
             Click="BtnNoAccount_Click"
-            MouseEnter="BtnNoAccount_OnMouseEnter"
-            MouseLeave="BtnNoAccount_OnMouseLeave"
+            Content="Dont have an Account?"
             Cursor="Hand"
             FontSize="15"
-            >
+            MouseEnter="BtnNoAccount_OnMouseEnter"
+            MouseLeave="BtnNoAccount_OnMouseLeave">
             <Button.Template>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
                 </ControlTemplate>
             </Button.Template>
