--- a/TravelPal/Pages/PackingListPage.xaml
+++ b/TravelPal/Pages/PackingListPage.xaml
@@ -1,65 +1,65 @@
-﻿<Page x:Class="TravelPal.Pages.PackingListPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="412.5" 
-      d:DesignWidth="640"
-      Title="PackingListPage"
-      Background="{StaticResource GradientMainWindow}"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.PackingListPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="PackingListPage"
+    d:DesignHeight="412.5"
+    d:DesignWidth="640"
+    Background="{StaticResource GradientMainWindow}"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="0.5*"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        
+
         <Label
-            Grid.Column="0"
             Grid.Row="0"
+            Grid.Column="0"
             Grid.ColumnSpan="2"
-            VerticalAlignment="Center"
             HorizontalAlignment="Center"
+            VerticalAlignment="Center"
             Content="Your Packing List"
             FontSize="20"
-            FontWeight="Bold"
-            />
+            FontWeight="Bold" />
         <ListView
             Name="LstViewPackingList"
-            Grid.Column="0"
             Grid.Row="1"
-            Grid.ColumnSpan="2"
             Grid.RowSpan="5"
-            Background="#33000000" 
-            Foreground="White" 
-            BorderBrush="Transparent" 
-            BorderThickness="0" 
-            Margin="10" 
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="10"
             Padding="5"
+            Background="#33000000"
+            BorderBrush="Transparent"
+            BorderThickness="0"
             FontFamily="{StaticResource MonoSpaceFont}"
-            ItemsSource="{Binding PackingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            >
+            Foreground="White"
+            ItemsSource="{Binding PackingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.Template>
                 <ControlTemplate TargetType="ListView">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
                         <ScrollViewer>
                             <ItemsPresenter />
                         </ScrollViewer>
@@ -70,156 +70,157 @@
         </ListView>
 
         <Label
+            Grid.Row="1"
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="1"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="Item Name:"
-            FontSize="20"/>
+            FontSize="20" />
         <TextBox
             Name="TxtBxItemName"
-            Grid.Column="4"
             Grid.Row="1"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="4"
             Width="auto"
             Height="30"
-            Text="{Binding ItemName}"/>
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding ItemName}" />
 
         <Label
+            Grid.Row="2"
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="2"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="Info about Item:"
-            FontSize="20"/>
+            FontSize="20" />
         <TextBox
             Name="TxtBxItemInfo"
-            Grid.Column="4"
             Grid.Row="2"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            VerticalContentAlignment="Center"
-            FontSize="20"
+            Grid.Column="4"
             Width="auto"
             Height="30"
-            Text="{Binding ItemInfo}"/>
+            VerticalContentAlignment="Center"
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding ItemInfo}" />
 
         <Label
-            Grid.Column="2"
             Grid.Row="3"
+            Grid.Column="2"
             Grid.ColumnSpan="2"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="Travel Document:"
-            FontSize="20"/>
+            FontSize="20" />
         <CheckBox
             Name="ChkBxItemIsTravelDocument"
-            Grid.Column="4"
             Grid.Row="3"
-            IsThreeState="False"
-            VerticalAlignment="Center" 
+            Grid.Column="4"
+            VerticalAlignment="Center"
             Checked="ChkBxItemIsTravelDocument_OnChecked"
-            Unchecked="ChkBxItemIsTravelDocument_OnUnchecked"
             IsChecked="{Binding ItemIsTravelDocument}"
-        >Click for yes</CheckBox>
+            IsThreeState="False"
+            Unchecked="ChkBxItemIsTravelDocument_OnUnchecked">
+            Click for yes
+        </CheckBox>
 
         <Label
             Name="LblItemCount"
-            Grid.Column="3"
             Grid.Row="4"
-            VerticalAlignment="Center"
+            Grid.Column="3"
             HorizontalAlignment="Right"
-            FontSize="20"
-            Content="Item Count:"/>
+            VerticalAlignment="Center"
+            Content="Item Count:"
+            FontSize="20" />
         <StackPanel
             Name="StkPanlItemCount"
-            Grid.Column="4"
             Grid.Row="4"
+            Grid.Column="4"
             Orientation="Horizontal">
             <TextBox
                 Name="TxtBxItemCount"
-                Background="#10000000"
-                BorderThickness="0,0,0,1.1"
-                BorderBrush="Black"
-                VerticalContentAlignment="Center"
-                VerticalAlignment="Center"
-                FontSize="20"
                 Width="110"
                 Height="30"
-                IsReadOnly="true"
+                VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
-                Text="{Binding ItemCount, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                VerticalContentAlignment="Center"
+                Background="#10000000"
+                BorderBrush="Black"
+                BorderThickness="0,0,0,1.1"
+                FontSize="20"
+                IsReadOnly="true"
                 PreviewTextInput="TxtBxItemCount_OnPreviewTextInput"
-            ></TextBox>
+                Text="{Binding ItemCount, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <StackPanel
+                Margin="8,0,0,0"
                 HorizontalAlignment="Right"
-                VerticalAlignment="Center"
-                Margin="8,0,0,0">
+                VerticalAlignment="Center">
                 <Button
                     Name="BtnItemIncrementUp"
                     Width="20"
                     Height="20"
+                    Margin="0,0,0,2"
                     Background="{StaticResource DarkMint}"
-                    Content="{StaticResource ArrowUp}"
-                    Margin="0,0,0,2" 
-                    Click="BtnItemIncrementUp_OnClick"/>
+                    Click="BtnItemIncrementUp_OnClick"
+                    Content="{StaticResource ArrowUp}" />
 
                 <Button
                     Name="BtnItemIncrementDown"
                     Width="20"
                     Height="20"
                     Background="{StaticResource DarkMint}"
-                    Content="{StaticResource ArrowDown}" 
-                    Click="BtnItemIncrementDown_OnClick"/>
+                    Click="BtnItemIncrementDown_OnClick"
+                    Content="{StaticResource ArrowDown}" />
             </StackPanel>
         </StackPanel>
 
 
-        <!--When the TravelDocument checkbox is checked-->
+        <!--  When the TravelDocument checkbox is checked  -->
 
         <Label
             Name="LblItemIsRequired"
-            Visibility="Hidden"
+            Grid.Row="4"
             Grid.Column="2"
             Grid.ColumnSpan="2"
-            Grid.Row="4"
-            Content="Item Is Required:"
-            VerticalAlignment="Center"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            Content="Item Is Required:"
             FontSize="20"
-            ></Label>
+            Visibility="Hidden" />
         <CheckBox
             Name="ChkBxItemIsRequired"
-            Visibility="Hidden"
-            Grid.Column="4"
             Grid.Row="4"
+            Grid.Column="4"
+            VerticalAlignment="Center"
+            IsChecked="{Binding ItemIsRequired}"
             IsThreeState="False"
-            VerticalAlignment="Center" 
-            IsChecked="{Binding ItemIsRequired}">Click for yes</CheckBox>
-        <!--When the TravelDocument checkbox is checked END-->
+            Visibility="Hidden">
+            Click for yes
+        </CheckBox>
+        <!--  When the TravelDocument checkbox is checked END  -->
 
 
 
         <Button
-            Grid.Column="3"
-            Grid.Row="5"
-            Grid.ColumnSpan="2"
             Name="BtnAddItemToList"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Center"
+            Grid.Row="5"
+            Grid.Column="3"
+            Grid.ColumnSpan="2"
             Margin="0,0,10,0"
             Padding="10"
-            Content="Add item"
-            Background="{StaticResource DarkMint}" 
-            Click="BtnAddItemToList_OnClick"/>
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Click="BtnAddItemToList_OnClick"
+            Content="Add item" />
 
     </Grid>
 </Page>
