--- a/TravelPal/Pages/RegisterPage.xaml
+++ b/TravelPal/Pages/RegisterPage.xaml
@@ -1,120 +1,119 @@
-﻿<Page x:Class="TravelPal.Pages.RegisterPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="RegisterPage"
-      Background="Transparent"
-      ShowsNavigationUI="False"
-      DataContext="{Binding RelativeSource={RelativeSource Self}}">
+﻿<Page
+    x:Class="TravelPal.Pages.RegisterPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
+    Title="RegisterPage"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    Background="Transparent"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    ShowsNavigationUI="False"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            
+
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="2*" />
+
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <Label
             Grid.Column="1"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             Content="User Name:"
-            Foreground="{StaticResource TextColor}"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Right"
             FontFamily="{StaticResource MainFont}"
-            FontSize="30"/>
+            FontSize="30"
+            Foreground="{StaticResource TextColor}" />
 
         <TextBox
-            Grid.Column="2"
-            Grid.Row="0"
             Name="TxtBxUserName"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            FontSize="20"
+            Grid.Row="0"
+            Grid.Column="2"
             Width="auto"
             Height="50"
-            Text="{Binding UserName}"/>
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding UserName}" />
 
-        <Label  
-            Grid.Column="1"
+        <Label
             Grid.Row="1"
-            Content="Password: "
-            Foreground="{StaticResource TextColor}"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            Content="Password: "
             FontFamily="{StaticResource MainFont}"
-            FontSize="30"/>
+            FontSize="30"
+            Foreground="{StaticResource TextColor}" />
 
         <TextBox
-            Grid.Column="2"
-            Grid.Row="1"
             Name="TxtBxPassword"
-            Background="#10000000"
-            BorderThickness="0,0,0,1.1"
-            BorderBrush="Black"
-            FontSize="20"
+            Grid.Row="1"
+            Grid.Column="2"
             Width="auto"
             Height="50"
-            Text="{Binding Password }"/>
+            Background="#10000000"
+            BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
+            Text="{Binding Password}" />
 
-        <Label  
-            Grid.Column="1"
+        <Label
             Grid.Row="2"
-            Content="Country of origin:"
-            Foreground="{StaticResource TextColor}"
-            VerticalAlignment="Center"
+            Grid.Column="1"
             HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            Content="Country of origin:"
             FontFamily="{StaticResource MainFont}"
-            FontSize="30"/>
+            FontSize="30"
+            Foreground="{StaticResource TextColor}" />
 
 
         <StackPanel
-            Grid.Column="2"
             Grid.Row="2"
-            VerticalAlignment="Top"
+            Grid.Column="2"
+            Margin="0,0,0,0"
             HorizontalAlignment="Center"
-            Orientation="Horizontal"
-            Margin="0,0,0,0">
-            <Label
-                Content="Eu Country"></Label>
+            VerticalAlignment="Top"
+            Orientation="Horizontal">
+            <Label Content="Eu Country" />
             <CheckBox
                 Name="ChkBxEuCountry"
+                HorizontalAlignment="Center"
                 VerticalAlignment="Bottom"
-                HorizontalAlignment="Center" 
                 Checked="ChkBxEuCountry_Checked"
-                Unchecked="ChkBxEuCountry_OnUnchecked"
-                IsThreeState="False"
                 IsChecked="False"
-                ></CheckBox>
+                IsThreeState="False"
+                Unchecked="ChkBxEuCountry_OnUnchecked" />
         </StackPanel>
 
         <ComboBox
             Name="ComboBxCountries"
-            Grid.Column="2"
             Grid.Row="2"
+            Grid.Column="2"
             Height="45"
-            VerticalContentAlignment="Center"
             HorizontalContentAlignment="Center"
-            FontSize="20"
+            VerticalContentAlignment="Center"
             Background="#10000000"
-            BorderThickness="0,0,0,1.1"
             BorderBrush="Black"
+            BorderThickness="0,0,0,1.1"
+            FontSize="20"
             SelectionChanged="ComboBxCountries_OnSelectionChanged">
             <ComboBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ComboBoxItem}">
@@ -125,47 +124,45 @@
 
         <Label
             Name="LblErrorMessege"
-            Grid.Column="2"
             Grid.Row="3"
-            VerticalAlignment="Top"
+            Grid.Column="2"
             HorizontalAlignment="Center"
-            FontSize="15"
-            />
+            VerticalAlignment="Top"
+            FontSize="15" />
         <Button
             Name="BtnRegister"
-            Grid.Column="2"
             Grid.Row="3"
-            Content="Create User"
+            Grid.Column="2"
             Width="150"
             Height="50"
-            Background="{StaticResource DarkMint}"
-            FontSize="20"
             VerticalAlignment="Bottom"
+            Background="{StaticResource DarkMint}"
             Click="BtnRegister_Click"
-            />
+            Content="Create User"
+            FontSize="20" />
         <Button
             Name="BtnLogIn"
-            Grid.Column="2"
             Grid.Row="4"
+            Grid.Column="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Background="Transparent"
-            Content="Log In"
-            BorderThickness="0,0,0,1"
-            Foreground="Black"
             BorderBrush="Black"
+            BorderThickness="0,0,0,1"
             Click="BtnLogIn_OnClick"
-            MouseEnter="BtnLogIn_OnMouseEnter"
-            MouseLeave="BtnLogIn_OnMouseLeave"
+            Content="Log In"
             Cursor="Hand"
-            FontSize="15">
+            FontSize="15"
+            Foreground="Black"
+            MouseEnter="BtnLogIn_OnMouseEnter"
+            MouseLeave="BtnLogIn_OnMouseLeave">
             <Button.Template>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
                 </ControlTemplate>
             </Button.Template>
