--- a/TravelPal/Pages/SplashScreenPage.xaml
+++ b/TravelPal/Pages/SplashScreenPage.xaml
@@ -1,42 +1,42 @@
-﻿<Page x:Class="TravelPal.Pages.SplashScreenPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TravelPal.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" 
-      d:DesignWidth="{StaticResource PageWidth}"
-      Title="SplashScreenPage"
-      Background="Transparent"
-      ShowsNavigationUI="False"
-      >
-    <!--Background="{StaticResource GradientSplashScreen}"-->
+﻿<Page
+    x:Class="TravelPal.Pages.SplashScreenPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TravelPal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="SplashScreenPage"
+    d:DesignHeight="{StaticResource PageHeight}"
+    d:DesignWidth="{StaticResource PageWidth}"
+    Background="Transparent"
+    ShowsNavigationUI="False"
+    mc:Ignorable="d">
+    <!--  Background="{StaticResource GradientSplashScreen}"  -->
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="7*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="7*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="6*"></RowDefinition>
-            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="6*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
         <TextBlock
-        Name="TxtBlckLogoLogIn"
-        Grid.Column="1"
-        Grid.Row="1"
-        FontFamily="{StaticResource MainFont}"
-        FontSize="100"
-        FontWeight="ExtraBold"
-        Text="TravelPal"
-        VerticalAlignment="Center"
-        HorizontalAlignment="Center"
-        MouseLeftButtonDown="TxtBlckLogoLogIn_OnMouseLeftButtonDown"
-        Cursor="Hand">
+            Name="TxtBlckLogoLogIn"
+            Grid.Row="1"
+            Grid.Column="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Cursor="Hand"
+            FontFamily="{StaticResource MainFont}"
+            FontSize="100"
+            FontWeight="ExtraBold"
+            MouseLeftButtonDown="TxtBlckLogoLogIn_OnMouseLeftButtonDown"
+            Text="TravelPal">
             <TextBlock.Style>
                 <Style TargetType="TextBlock">
                     <Setter Property="Opacity" Value="1" />
@@ -44,22 +44,36 @@
                         <EventTrigger RoutedEvent="MouseEnter">
                             <BeginStoryboard>
                                 <Storyboard>
-                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                                    <DoubleAnimation
+                                        Storyboard.TargetProperty="Opacity"
+                                        To="0"
+                                        Duration="0:0:0.5" />
                                     <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="Log In" />
                                     </ObjectAnimationUsingKeyFrames>
-                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                                    <DoubleAnimation
+                                        BeginTime="0:0:0.5"
+                                        Storyboard.TargetProperty="Opacity"
+                                        To="1"
+                                        Duration="0:0:0.5" />
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger>
                         <EventTrigger RoutedEvent="MouseLeave">
                             <BeginStoryboard>
                                 <Storyboard>
-                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                                    <DoubleAnimation
+                                        Storyboard.TargetProperty="Opacity"
+                                        To="0"
+                                        Duration="0:0:0.5" />
                                     <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="TravelPal" />
                                     </ObjectAnimationUsingKeyFrames>
-                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                                    <DoubleAnimation
+                                        BeginTime="0:0:0.5"
+                                        Storyboard.TargetProperty="Opacity"
+                                        To="1"
+                                        Duration="0:0:0.5" />
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger>
@@ -72,20 +86,19 @@
         </TextBlock>
 
         <Button
-            Grid.Column="1"
             Grid.Row="2"
-            Content="Log In"
+            Grid.Column="1"
             Width="100"
             Height="40"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Background="{StaticResource DarkMint}"
-            Foreground="Black"
             BorderBrush="Transparent"
             BorderThickness="0"
+            Click="ButtonBase_OnClick"
+            Content="Log In"
             FontSize="16"
             FontWeight="Bold"
-            Click="ButtonBase_OnClick"
-        />
+            Foreground="Black" />
     </Grid>
 </Page>
